# NewsfeedApp

./: .gitignore  README.md  docker-compose.yml
database/: Dockerfile  initdb.py  pyproject.toml
datamodels/: Dockerfile  articleobjects.py
environment/: config.env  hpconfig.env  keys_example.env
kafkatopic/: .dockerignore  Dockerfile  pyproject.toml  settopic.py
newsproducer/: Dockerfile  producenews.py  pyproject.toml  sources.json
py-api/: Dockerfile  main.py  pyproject.toml
summarizer/: Dockerfile  pyproject.toml  summarizestory.py
topicgenerator/: Dockerfile  generatetopics.py  pyproject.toml
urlprocessor/: Dockerfile  extractstory.py  pyproject.toml
